[gd_scene load_steps=35 format=3 uid="uid://wa1x54yxvxmo"]

[ext_resource type="Script" uid="uid://b0jt2fdp3e3ld" path="res://scripts/monster.gd" id="1_1cbnp"]
[ext_resource type="Texture2D" uid="uid://dyenb6lii074e" path="res://assets/sprites/Cacodaemon Sprite Sheet.png" id="1_uwnm8"]
[ext_resource type="AudioStream" uid="uid://w87wqpdouykt" path="res://assets/audio/monster_attack.mp3" id="3_gp4s5"]
[ext_resource type="AudioStream" uid="uid://bwll1m6a3ra5g" path="res://assets/audio/monster_die.mp3" id="4_gdl1p"]
[ext_resource type="AudioStream" uid="uid://desii63t7wsv8" path="res://assets/audio/monster_wakeup.mp3" id="5_v8ewj"]
[ext_resource type="AudioStream" uid="uid://cu643oxidgdua" path="res://assets/audio/monster_hurt.mp3" id="6_gdl1p"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1cbnp"]
radius = 103.17461

[sub_resource type="AtlasTexture" id="AtlasTexture_v8ewj"]
atlas = ExtResource("1_uwnm8")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yce20"]
atlas = ExtResource("1_uwnm8")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fttm7"]
atlas = ExtResource("1_uwnm8")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akk5r"]
atlas = ExtResource("1_uwnm8")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2c6u"]
atlas = ExtResource("1_uwnm8")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei7v0"]
atlas = ExtResource("1_uwnm8")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v1i4"]
atlas = ExtResource("1_uwnm8")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n78d1"]
atlas = ExtResource("1_uwnm8")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7han3"]
atlas = ExtResource("1_uwnm8")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70tfl"]
atlas = ExtResource("1_uwnm8")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0ec1"]
atlas = ExtResource("1_uwnm8")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4862"]
atlas = ExtResource("1_uwnm8")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0iwja"]
atlas = ExtResource("1_uwnm8")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_opw4d"]
atlas = ExtResource("1_uwnm8")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c47ug"]
atlas = ExtResource("1_uwnm8")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlss8"]
atlas = ExtResource("1_uwnm8")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp4s5"]
atlas = ExtResource("1_uwnm8")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdl1p"]
atlas = ExtResource("1_uwnm8")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydrmy"]
atlas = ExtResource("1_uwnm8")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0vn4"]
atlas = ExtResource("1_uwnm8")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1jio"]
atlas = ExtResource("1_uwnm8")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmppe"]
atlas = ExtResource("1_uwnm8")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_84d41"]
atlas = ExtResource("1_uwnm8")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nesoo"]
atlas = ExtResource("1_uwnm8")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dqnb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8ewj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yce20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fttm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akk5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2c6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei7v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v1i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n78d1")
}],
"loop": false,
"name": &"die",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7han3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70tfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0ec1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4862")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0iwja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opw4d")
}],
"loop": true,
"name": &"fly",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c47ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlss8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp4s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdl1p")
}],
"loop": false,
"name": &"hurt",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydrmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0vn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1jio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmppe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84d41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nesoo")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vivac"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c47ug"]
radius = 18.16

[node name="monster" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_1cbnp")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(15, -3)
shape = SubResource("CircleShape2D_1cbnp")
debug_color = Color(0.5887747, 0.54798746, 0.065881155, 0.41960785)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = -1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_dqnb0")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vivac")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(6.84, 4.3)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_c47ug")
debug_color = Color(0.98039216, 0, 0, 0.41960785)

[node name="SFX_Attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gp4s5")
volume_db = -20.0

[node name="SFX_Die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_gdl1p")
volume_db = -10.0

[node name="SFX_Wakeup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_v8ewj")
volume_db = -15.0

[node name="SFX_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gdl1p")
volume_db = -10.0
